--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'android'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.0"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.0"
     useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
@@ -34,8 +34,10 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':senzc')
-    compile 'com.android.support:design:24.1.0'
-    compile 'com.android.support:support-v4:24.1.0'
+    //compile 'com.android.support:design:24.1.0'
+    //compile 'com.android.support:support-v4:24.1.0'
+    compile 'com.android.support:appcompat-v7:23.1.0'
+    compile 'com.android.support:design:23.1.1'
     compile 'com.google.android.gms:play-services:9.0.2'
     compile 'com.github.siyamed:android-shape-imageview:0.9.+@aar'
     compile 'org.json:json:20141113'
