--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
     <!-- android:name=".application.SenzApplication" -->
     <application
         android:name="android.support.multidex.MultiDexApplication"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/rlogo_launcher"
         android:label="@string/app_name">
 
         <!-- production key -->
@@ -62,12 +62,6 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity
-            android:name=".ui.HomeActivityOld"
-            android:configChanges="orientation"
-            android:launchMode="singleTask"
-            android:screenOrientation="portrait"
-            android:theme="@style/Theme.Yello" />
         <activity
             android:name=".ui.SplashActivity"
             android:configChanges="orientation"
@@ -143,13 +137,14 @@
 
         <receiver android:name=".receivers.BootCompleteReceiver">
             <intent-filter>
-                <action android:name="com.score.senz.senzservice" />
+                <action android:name="senz.action.RESTART" />
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
 
         <activity android:name=".ui.PhotoActivity"
-            android:theme="@style/Theme.AppCompat.Light.DarkActionBar" ></activity>
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar" >
+        </activity>
     </application>
 
 </manifest>
