--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,12 +20,11 @@ android {
             debuggable false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
+        debug {
+            shrinkResources true
+        }
     }
 }
-
-
-
-
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
