--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -140,7 +140,8 @@
             android:enabled="true" />
         <service
             android:name=".services.RemoteSenzService"
-            android:enabled="true">
+            android:enabled="true"
+            android:process=":remote">
             <intent-filter>
                 <action android:name=".services.RemoteSenzService" />
             </intent-filter>
@@ -153,7 +154,7 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
-        <receiver android:name=".receivers.AlarmReceiver" />
+        <receiver android:name=".receivers.AlarmReceiver" android:process=":remote"/>
         <receiver android:name=".receivers.DeathWatchReceiver">
             <intent-filter>
                 <action android:name="senz.action.RESTART" />
