--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     compile 'com.github.siyamed:android-shape-imageview:0.9.+@aar'
     compile 'com.google.maps.android:android-maps-utils:0.4.+'
     compile 'com.android.support:multidex:1.0.0'
+    compile 'com.skyfishjy.ripplebackground:library:1.0.1'
 }
